tests/ui/nll/issue-57843.stderr
error: implementation of `FnOnce` is not general enough
  --> $DIR/issue-57843.rs:25:9
   |
LL |     Foo(Box::new(|_| ()));
   |         ^^^^^^^^^^^^^^^^ implementation of `FnOnce` is not general enough
   |
   = note: closure with signature `fn(&'0 bool)` must implement `FnOnce<(&'1 bool,)>`, for any two lifetimes `'0` and `'1`...
   = note: ...but it actually implements `FnOnce<(&bool,)>`

error: aborting due to 1 previous error

